stripe inside checkout page

--- a/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
@@ -331,7 +331,9 @@
     <script src="~/Dashboard/assets/js/typeahead-search/typeahead-custom.js"></script>
     <script src="~/Dashboard/assets/js/height-equal.js"></script>
     <!-- Plugins JS Ends-->
-
+    
+    <script src="~/Dashboard/assets/js/chart/google/google-chart-loader.js"></script>
+    <script src="~/Dashboard/assets/js/chart/google/google-chart.js"></script>
     <script src="~/Dashboard/assets/js/chart/chartjs/chart.min.js"></script>
     <script src="~/Dashboard/assets/js/chart/chartist/chartist.js"></script>
     <script src="~/Dashboard/assets/js/chart/chartist/chartist-plugin-tooltip.js"></script>
