--- a/PMS-PropertyHapa.Admin/Views/Dashboard/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Dashboard/Index.cshtml
@@ -145,7 +145,48 @@
                     </div>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-sm-12 col-xl-6 box-col-6">
+                    <div class="card">
+                        <div class="card-header pb-0">
+                            <h5>Subscriptions</h5>
+                        </div>
+                        <div class="card-body p-0 chart-block">
+                            <div class="chart-overflow" id="subscriptionPieChart"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-xl-3 col-lg-6">
+                    <div class="card o-hidden">
+                        <div class="card-body">
+                            <div class="media static-widget">
+                                <div class="media-body">
+                                    <h6 class="font-roboto">Subscription Earnings</h6>
+                                    <h4 class="mb-0 counter" id="totalEarnings">0</h4>
+                                </div>
+                                <svg class="fill-secondary" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M22.5938 14.1562V17.2278C20.9604 17.8102 19.7812 19.3566 19.7812 21.1875C19.7812 23.5138 21.6737 25.4062 24 25.4062C24.7759 25.4062 25.4062 26.0366 25.4062 26.8125C25.4062 27.5884 24.7759 28.2188 24 28.2188C23.2241 28.2188 22.5938 27.5884 22.5938 26.8125H19.7812C19.7812 28.6434 20.9604 30.1898 22.5938 30.7722V33.8438H25.4062V30.7722C27.0396 30.1898 28.2188 28.6434 28.2188 26.8125C28.2188 24.4862 26.3263 22.5938 24 22.5938C23.2241 22.5938 22.5938 21.9634 22.5938 21.1875C22.5938 20.4116 23.2241 19.7812 24 19.7812C24.7759 19.7812 25.4062 20.4116 25.4062 21.1875H28.2188C28.2188 19.3566 27.0396 17.8102 25.4062 17.2278V14.1562H22.5938Z"></path>
+                                    <path d="M25.4062 0V11.4859C31.2498 12.1433 35.8642 16.7579 36.5232 22.5938H48C47.2954 10.5189 37.4829 0.704531 25.4062 0Z"></path>
+                                    <path d="M14.1556 31.8558C12.4237 29.6903 11.3438 26.9823 11.3438 24C11.3438 17.5025 16.283 12.1958 22.5938 11.4859V0C10.0492 0.731813 0 11.2718 0 24C0 30.0952 2.39381 35.6398 6.14897 39.8624L14.1556 31.8558Z"></path>
+                                    <path d="M47.9977 25.4062H36.5143C35.8044 31.717 30.4977 36.6562 24.0002 36.6562C21.0179 36.6562 18.3099 35.5763 16.1444 33.8444L8.13779 41.851C12.3604 45.6062 17.905 48 24.0002 48C36.7284 48 47.2659 37.9508 47.9977 25.4062Z"></path>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 box-col-12">
+                    <div class="card">
+                        <div class="card-header pb-0">
+                            <h5>Line Chart</h5>
+                        </div>
+                        <div class="card-body chart-block">
+                            <div class="chart-overflow" id="newLeadsChart"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="col-xl-4 col-md-6 dash-xl-50">
                 <div class="card news-update">
                     <div class="card-header card-no-border">
@@ -514,3 +555,80 @@
         </div>
     </div>
 </div>
+
+<script>
+    $(document).ready(function () {
+        google.charts.load('current', {
+            'packages': ['corechart']
+        });
+        google.charts.setOnLoadCallback(drawChart);
+
+        function drawChart() {
+            $.ajax({
+                url: '@Url.Action("GetAllSubscriptions", "Dashboard")',
+                method: 'GET',
+                success: function (response) {
+                    if (response.success) {
+                        var data = google.visualization.arrayToDataTable([
+                            ['Subscription', 'Count'],
+                            ...response.data.map(item => [item.SubscriptionName, item.Count])
+                        ]);
+
+                        var options = {
+                            pieHole: 0.4,
+                            width: '100%',
+                            height: 300,
+                            colors: ["#f8d62b", "#a927f9", "#51bb25", zetaAdminConfig.secondary, zetaAdminConfig.primary]
+                        };
+
+                        var chart = new google.visualization.PieChart(document.getElementById('subscriptionPieChart'));
+                        chart.draw(data, options);
+
+
+                        // Update the total earnings
+                        $('#totalEarnings').html(response.totalEarnings);
+                        console.log(response.totalEarnings);
+                    } else {
+                        console.error(response.message);
+                    }
+                },
+                error: function (xhr, status, error) {
+                    console.error(error);
+                }
+            });
+        }
+
+        if ($("#newLeadsChart").length > 0) {
+            var data = new google.visualization.DataTable();
+            data.addColumn('number', 'month');
+            data.addColumn('number', 'Guardians of the Galaxy');
+            data.addColumn('number', 'The Avengers');
+            data.addColumn('number', 'Transformers: Age of Extinction');
+            data.addRows([
+                [1, 37.8, 80.8, 41.8],
+                [2, 30.9, 10.5, 32.4],
+                [3, 40.4, 57, 25.7],
+                [4, 11.7, 18.8, 10.5],
+                [5, 20, 17.6, 10.4],
+                [6, 8.8, 13.6, 7.7],
+                [7, 7.6, 12.3, 9.6],
+                [8, 12.3, 29.2, 10.6],
+                [9, 16.9, 42.9, 14.8],
+                [10, 12.8, 30.9, 11.6],
+                [11, 5.3, 7.9, 4.7],
+                [12, 6.6, 8.4, 5.2],
+            ]);
+            var options = {
+                chart: {
+                    title: 'Box Office Earnings in First Two Weeks of Opening',
+                    subtitle: 'in millions of dollars (USD)'
+                },
+                colors: [zetaAdminConfig.primary, zetaAdminConfig.secondary, "#51bb25"],
+                height: 500,
+                width: '100%',
+            };
+            var chart = new google.charts.Line(document.getElementById('newLeadsChart'));
+            chart.draw(data, google.charts.Line.convertOptions(options));
+        }
+    });
+</script>
