--- a/PMS-PropertyHapa.Staff/Views/Home/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Home/Index.cshtml
@@ -319,7 +319,7 @@
             </div>
         </div>
         
-        <div class="row">
+       @*  <div class="row">
             <div class="col-12 box-col-12">
                 <div class="card">
                     <div class="card-header pb-0">
@@ -330,7 +330,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> *@
         
         <div class="col-12 colorfull-kanban">
             <div class="card">
@@ -920,66 +920,66 @@
             $("#TittlName").text(organizationName);
         }
 
-        // Gantt Chart Start
-        // Gantt chart
-        google.charts.load('current', { 'packages': ['gantt'] });
-        google.charts.setOnLoadCallback(drawChart);
+        // // Gantt Chart Start
+        // // Gantt chart
+        // google.charts.load('current', { 'packages': ['gantt'] });
+        // google.charts.setOnLoadCallback(drawChart);
 
-        function daysToMilliseconds(days) {
-            return days * 24 * 60 * 60 * 1000;
-        }
+        // function daysToMilliseconds(days) {
+        //     return days * 24 * 60 * 60 * 1000;
+        // }
 
-        function drawChart() {
+        // function drawChart() {
 
-            var data = new google.visualization.DataTable();
-            data.addColumn('string', 'Task ID');
-            data.addColumn('string', 'Task Name');
-            data.addColumn('string', 'Resource');
-            data.addColumn('date', 'Start Date');
-            data.addColumn('date', 'End Date');
-            data.addColumn('number', 'Duration');
-            data.addColumn('number', 'Percent Complete');
-            data.addColumn('string', 'Dependencies');
+        //     var data = new google.visualization.DataTable();
+        //     data.addColumn('string', 'Task ID');
+        //     data.addColumn('string', 'Task Name');
+        //     data.addColumn('string', 'Resource');
+        //     data.addColumn('date', 'Start Date');
+        //     data.addColumn('date', 'End Date');
+        //     data.addColumn('number', 'Duration');
+        //     data.addColumn('number', 'Percent Complete');
+        //     data.addColumn('string', 'Dependencies');
 
-            data.addRows([
-                ['Research', 'Find sources', null,
-                    new Date(2015, 0, 1), new Date(2015, 0, 5), null, 100, null],
-                ['Write', 'Write paper', 'write',
-                    null, new Date(2015, 0, 9), daysToMilliseconds(3), 25, 'Research,Outline'],
-                ['Cite', 'Create bibliography', 'write',
-                    null, new Date(2015, 0, 7), daysToMilliseconds(1), 20, 'Research'],
-                ['Complete', 'Hand in paper', 'complete',
-                    null, new Date(2015, 0, 10), daysToMilliseconds(1), 0, 'Cite,Write'],
-                ['Outline', 'Outline paper', 'write',
-                    null, new Date(2015, 0, 6), daysToMilliseconds(1), 100, 'Research']
-            ]);
+        //     data.addRows([
+        //         ['Research', 'Find sources', null,
+        //             new Date(2015, 0, 1), new Date(2015, 0, 5), null, 100, null],
+        //         ['Write', 'Write paper', 'write',
+        //             null, new Date(2015, 0, 9), daysToMilliseconds(3), 25, 'Research,Outline'],
+        //         ['Cite', 'Create bibliography', 'write',
+        //             null, new Date(2015, 0, 7), daysToMilliseconds(1), 20, 'Research'],
+        //         ['Complete', 'Hand in paper', 'complete',
+        //             null, new Date(2015, 0, 10), daysToMilliseconds(1), 0, 'Cite,Write'],
+        //         ['Outline', 'Outline paper', 'write',
+        //             null, new Date(2015, 0, 6), daysToMilliseconds(1), 100, 'Research']
+        //     ]);
 
-            var options = {
-                height: 275,
-                gantt: {
-                    criticalPathEnabled: false, // Critical path arrows will be the same as other arrows.
-                    arrow: {
-                        angle: 100,
-                        width: 5,
-                        color: '#51bb25',
-                        radius: 0
-                    },
+        //     var options = {
+        //         height: 275,
+        //         gantt: {
+        //             criticalPathEnabled: false, // Critical path arrows will be the same as other arrows.
+        //             arrow: {
+        //                 angle: 100,
+        //                 width: 5,
+        //                 color: '#51bb25',
+        //                 radius: 0
+        //             },
 
-                    palette: [
-                        {
-                            "color": zetaAdminConfig.primary,
-                            "dark": zetaAdminConfig.secondary,
-                            "light": "#047afb"
-                        }
-                    ]
+        //             palette: [
+        //                 {
+        //                     "color": zetaAdminConfig.primary,
+        //                     "dark": zetaAdminConfig.secondary,
+        //                     "light": "#047afb"
+        //                 }
+        //             ]
 
-                }
-            };
-            var chart = new google.visualization.Gantt(document.getElementById('gantt_chart'));
+        //         }
+        //     };
+        //     var chart = new google.visualization.Gantt(document.getElementById('gantt_chart'));
 
-            chart.draw(data, options);
-        }
-        // Gantt Chart End
+        //     chart.draw(data, options);
+        // }
+        // // Gantt Chart End
 
         // pie chart
         var options8 = {
